2000-05-10  Michael Yount  <csf@moscow.com>

	* bin/mj_wwwadm: Use the remote IP address as the
	local part of the fake requester address.

2000-05-10  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Bf/Parser.pm (parse): Change order of parsing.  Try to do
	specialized parsing even if the envelope doesn't include any VERP
	stuff.

2000-05-10  Michael Yount  <csf@moscow.com>

	* lib/Mj/SimpleDB/DB.pm: Do not use R_CURSOR when deleting.

	* lib/Mj/Format.pm (tokeninfo): Indicate reasons if they exist.

2000-05-09  Michael Yount  <csf@moscow.com>

	* lib/Mj/Config.pm (whence): Determine the source of a
	configuration setting: mj_cf_defs, DEFAULT, or list-specific.
	This information is displayed in the results of the 
	configshow command, as a comment.

2000-05-09  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MailOut.pm (owner_done): If the MIME parser didn't like
	the message, don't try to do anything with it.

2000-05-08  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Bf/Parser.pm (parse): Make sure $type is defined before
	returning.

	* lib/Mj/MailOut.pm (owner_done): Avoid undef warning when no
	diagnostic is available.

2000-05-06  Michael Yount  <csf@moscow.com>

	* /lib/Mj/Access.pm:
	(_a_confirm2) Allow the command if the requester and victim are
	identical and the victim's password was supplied.

2000-05-06  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MailOut.pm (owner_done): Report diagnostic in message to
	owner.

	* lib/Bf/Parser.pm (parse_dsn): Return Diagnostic-Code: if
	available.  Loop over all per-user bounce status blocks and return
	data on all users found there.

2000-05-05  Michael Yount  <csf@moscow.com>

	* /lib/Majordomo.pm:
	(changeaddr) If an address is to be replaced by an address that
	is already in the registry, combine the list data for the
	two registry entries.

	(set) Return an error immediately if the set command is called
	for the DEFAULT or GLOBAL lists.

	* /lib/Mj/Access.pm, /lib/Mj/CommandProps.pm: